fix: horizontal scroll for right column in Vividus table view

--- a/src/features/locators/styles/LocatorPageTable.less
+++ b/src/features/locators/styles/LocatorPageTable.less
@@ -12,6 +12,10 @@
     }
   }
 
+  .jdn__locator_output-string-general-view {
+    text-wrap: nowrap;
+  }
+
   .jdn__locatorsTree--left,
   .jdn__locatorsTree--right {
     height: calc(100vh - 192px);
@@ -69,6 +73,6 @@
   }
 
   .jdn__locator {
-    width: fit-content;
+    width: -webkit-fill-available;
   }
 }
